fix section title overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,24 +40,19 @@ body {
   background-color: var(--af-color-chefs-hat);
   color: var(--af-color-tristesse);
   font-family: 'Inter', sans-serif;
-  overflow-x: hidden;
-  max-width: 100vw;
 }
 
 /* html,
 body,
 #__nuxt,
 #__layout {
-  height: calc(100vh - calc(100vh - 100%));
+  overflow-x: hidden;
+  max-width: 100vw;
 } */
 
 .--vh {
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
-}
-
-* {
-  scroll-behavior: smooth;
 }
 
 .wrapper {
